test_scores/negative_dimers/features/P46199.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P46199.pkl.xz